correct css instagram feed added overflow-y: hidden;

--- a/src/components/InstagramFeed/index.scss
+++ b/src/components/InstagramFeed/index.scss
@@ -60,6 +60,7 @@ img {
   .horizontal-picker {
     display: block;
     overflow-x: auto;
+    overflow-y: hidden;
     white-space: nowrap;
     
     .instagram-picker__item {
